--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,8 @@ width: 300px;
 @media screen and (max-width: 1000px){
 
     .page_image{
-     
+     width:100%; 
+        height:80%;
     }
 }
 
