--- a/styles/style.css
+++ b/styles/style.css
@@ -68,6 +68,7 @@ width: 300px;
 }
 .footer p{
    color: #7e7e7e;
+    font-size: 20px;
 }
 .footer a {
     text-decoration: none;
@@ -102,8 +103,8 @@ width: 300px;
 @media screen and (max-width: 1000px){
 
     .page_image{
-     width:100%; 
-        height:80%;
+       width: 100%;
+        height: 100%;
     }
 }
 
