--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 .bodys{
-
+margin-top:20px;
 }
 
 .header-wrapper{
@@ -100,11 +100,11 @@ width: 300px;
 .footer_wrapper__url {
     font-size: 27px;
 }
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 800px){
 
     .page_image{
        width: 100%;
-        height: 100%;
+        height: 80%;
     }
 }
 
