--- a/styles/style.css
+++ b/styles/style.css
@@ -105,6 +105,10 @@ width: 300px;
     .page_image{
        width: 100%;
         height: 75%;
+        display: flex;
+        justify-content: center;
     }
+
+    
 }
 
