--- a/styles/style.css
+++ b/styles/style.css
@@ -104,11 +104,13 @@ width: 300px;
 
     .page_image{
        width: 100%;
-        height: 95%;
         display: flex;
         justify-content: center;
     }
 
-    
+    .page_image__ivi{
+
+        height: 1250px;
+    }
 }
 
